--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/ShreddedChickenChili.html">Smoky Shredded Chicken Chili</a>
+        <ul>
+            <li><a href="./recipes/ShreddedChickenChili.html">Smoky Shredded Chicken Chili</a></li>
+            <li><a href="./recipes/Pad_Thai.html">Pad_Thai</a></li>
+        </ul>
     </body>
 </html>
