--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/ShreddedChickenChili.html">Smoky Shredded Chicken Chili</a></li>
             <li><a href="./recipes/Pad_Thai.html">Pad_Thai</a></li>
+            <li><a href="./recipes/Chicken_Pesto_Potatoes.html">Italian Chicken with Pesto Potatoes</a></li>
         </ul>
     </body>
 </html>
