Add alt tags to images in pages Add alt tags to each image on each page for better accessibility

--- a/recipes/Chicken_Pesto_Potatoes.html
+++ b/recipes/Chicken_Pesto_Potatoes.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <h1>Italian Chickenwith Pesto Potatoes</h1>
-        <img src="../images/Chicken_Pesto_Potatoes">
+        <h1>Italian Chicken with Pesto Potatoes</h1>
+        <img src="../images/Chicken_Pesto_Potatoes" alt="Plate of Italian Chicken with Pesto Potatoes">
 
         <h2>Meal Description</h2>
         <p>Perfect with Pesto. Pesto is one of those perfect sauces that goes perfectly on many things like pasta, chicken, and Potatoes in this case. Perfectly savory and refreshing, this dish can be quick to make and thoroughly enjoyed.Personally, I would omit the ham from this one, but you can add it for an addition to the flavor, if you wish.</p>
