--- a/recipes/Pad_Thai.html
+++ b/recipes/Pad_Thai.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Pad Thai</h1>
-        <img src="../images/Pad_Thai">
+        <img src="../images/Pad_Thai" alt="Plate of Pad Thai">
         
         <h2>Meal Description</h2>
         <p>A mix of savory, some sweet, and however much spice you want, you will never go wrong with an amazing Pad Thai! Rice noodles, green onions, peanuts, and chicken--What's not to love?</p>
